--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "typescript": "^5.5.3"
     },
     "dependencies": {
+        "@stablelib/chacha20poly1305": "^2.0.1",
         "msgpackr": "^1.11.2"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
