--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,21 @@
 {
     "compilerOptions": {
-        "target": "es2016",
-        "module": "commonjs",
-        "rootDir": "src",
+        "target": "es2020",
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "lib": ["es2020", "dom"],
+        "rootDir": ".",
         "outDir": "dist",
         "declaration": true,
         "declarationMap": true,
+        "sourceMap": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
     },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
